project(Parabolic)

file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
set(HEADER_DIR ${CMAKE_CURRENT_LIST_DIR})
file(GLOB_RECURSE HEADERS ${HEADER_DIR}/*.h)

include_directories(${HEADER_DIR})

add_library(${PROJECT_NAME} ${SOURCES} ${HEADERS})

set(${PROJECT_NAME}_INCLUDE_DIRS ${HEADER_DIR} CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)

install(TARGETS ${PROJECT_NAME} DESTINATION lib)
install(FILES ${HEADER_FILES} DESTINATION include)